release/1.3.2/VERSION.md
# 1.3.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.3.2```   |
| Release Time   | ```2012-08-15T22:00:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```pre-1.6```   |
| sha1   | ```3d8e55480977e32acd9844e545177e69a52f594b```   |
| size   | ```74091```   |
| total size  | ```49505710```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/3d8e55480977e32acd9844e545177e69a52f594b/pre-1.6.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c2efd57c7001ddf505ca534e54abf3d006e48309```   |
| size   | ```4586019```   |
| url       | ```https://launcher.mojang.com/v1/objects/c2efd57c7001ddf505ca534e54abf3d006e48309/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```3de2ae6c488135596e073a9589842800c9f53bfe```   |
| size   | ```1801710```   |
| url       | ```https://launcher.mojang.com/v1/objects/3de2ae6c488135596e073a9589842800c9f53bfe/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |